# dance-station

./: .gitignore  README.md  pyproject.toml
data/generations/music-349a4f73dba9/: 7d2d3d6d-f08d-4f21-b52b-bf71396d0091.json  ace-query-response-latest.json  ace-release-response.json  generation.json
data/generations/music-b8c3e5ecb826/: ace-query-response-latest.json  ace-release-response.json  ace-request.json
docs/: ui-notes.md
docs/plans/: 0016-strict-ace-api-health.md  0017-wait-for-runtime-before-ui.md  0018-runtime-startup-status.md  0022-isolate-runtime-startup-logs.md  0023-isolate-runtime-process-signals.md  0024-model-aware-repaint-defaults.md  0029-make-runtime-uv-sync-container-safe.md  0030-correct-acestep-continuation-workflow.md  0031-use-text-generation-before-boundary-repaint.md  0032-remove-margin-from-primary-workflow.md  0036-match-working-acestep-defaults.md  0037-seamless-transition-boundary.md  0038-acestep-repaint-transition.md  handle-non-json-acestep-model-list.md
src/autotransition/: cli.py  config.py  presets.py
src/autotransition/audio/: __init__.py  compose.py  ffmpeg.py  merge.py  probe.py  scaffold.py  selection.py
src/autotransition/models/: acestep.py  acestep_api.py  registry.py
src/autotransition/pipeline/: source_selection.py
src/autotransition/runtime/: ace_step.py
src/autotransition/ui/: app.py  state.py
tests/: test_acestep_api.py  test_audio_scaffolds.py  test_config.py  test_ffmpeg.py  test_library_publish.py  test_runtime.py  test_source_selection.py  test_transition_plan.py  test_ui_api.py
(+3 files in other folders)
